Minor edits to the preamble to get the data intro compiling.

--- a/tutorial_TeX/preamble.tex
+++ b/tutorial_TeX/preamble.tex
@@ -2,10 +2,10 @@
 \usepackage{graphicx}
 \usepackage{tabularx}
 %\usepackage{color}
-\usepackage[usenames,dvipsnames]{xcolor}
-\usepackage{longtable}
 \usepackage{colortbl}
-\usepackage[table]{xcolor}
+\usepackage[usenames,dvipsnames,table]{xcolor}
+\usepackage{booktabs}
+\usepackage{longtable}
 \usepackage{hanging}
 \usepackage{indentfirst}
 \usepackage{setspace}
