--- a/tutorial_TeX/RB_BayesFactor_Tutorial/RB_BayesFactor_Tutorial_content.tex
+++ b/tutorial_TeX/RB_BayesFactor_Tutorial/RB_BayesFactor_Tutorial_content.tex
@@ -194,7 +194,7 @@ Once the power posteriors have been saved to file, create a stepping stone sampl
 This function can read any file of power posteriors and compute the marginal likelihood using stepping-stone sampling. 
 {\tt \small \begin{snugshade*}
 \begin{lstlisting}
-ss <- steppingStoneSampler(file="model1.out", powerColumnName="power", likelihoodColumnName="likelihood")
+ss = steppingStoneSampler(file="model1.out", powerColumnName="power", likelihoodColumnName="likelihood")
 \end{lstlisting}
 \end{snugshade*}}
 
