--- a/tutorial_TeX/RB_BayesFactor_Tutorial/RB_BayesFactor_Tutorial.tex
+++ b/tutorial_TeX/RB_BayesFactor_Tutorial/RB_BayesFactor_Tutorial.tex
@@ -11,7 +11,7 @@
 \begin{center}
 
 \textbf{\LARGE Phylogenetic Inference using \RevBayes}\\\vspace{2mm}
-\textbf{\it{\Large Model section using Bayes factors}}\\\vspace{2mm}
+\textbf{\it{\Large Model selection using Bayes factors}}\\\vspace{2mm}
 \vspace{1cm}
 {\Large Sebastian H{\"o}hna}
 \vspace{1cm}
