fix xcolor compile, upd bg tutorials

--- a/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_1_content.tex
+++ b/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_1_content.tex
@@ -373,8 +373,9 @@ ch.run(10000)
 
 \subsubsection{Per-area rates}
 
-Biologically, there is nothing to say all areas are induce local extinctions at equal rates, as done above.
+Biologically, local extinction events probably do not occur at equal rates across all areas, as done above.
 Ecological factors, geographical distances, etc. might cause these parameters to be weakly correlated or completely uncorrelated.
+Dispersal rates, also, might not be the same between pairs of areas, or even symmetric depending on the direction of dispersal.
 Rather than constraining all events of a type to share a common rate, instead you might give each area it's own extinction parameter
 
 \begin{snugshade}
