--- a/tutorial_TeX/preamble.tex
+++ b/tutorial_TeX/preamble.tex
@@ -1,11 +1,11 @@
+\usepackage[usenames,dvipsnames,table]{xcolor}
+%\usepackage[table]{xcolor}
 \usepackage[]{authblk}
 \usepackage{graphicx}
 \usepackage{tabularx}
 %\usepackage{color}
-\usepackage[usenames,dvipsnames]{xcolor}
 \usepackage{longtable}
 \usepackage{colortbl}
-\usepackage[table]{xcolor}
 \usepackage{hanging}
 \usepackage{indentfirst}
 \usepackage{setspace}
