--- a/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_3_content.tex
+++ b/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_3_content.tex
@@ -6,15 +6,15 @@
 
 For small rate matrices, transition probabilities of beginning in state $i$ and ending in state $j$ equal the matrix exponential of the underlying rate matrix, scaled by the elapsed time of the process.
 This integrates over all unobserved transition events during the time interval $t$.
-Unfortunately, computing the matrix exponential scales poorly as the state space increases, ($O(n^4)$ for $n$ states).
+Unfortunately, computing the matrix exponential scales poorly as the state space increases, i.e. $O(n^4)$ for $n$ states.
 
 Alternatively, the probability of beginning in state $i$ and ending in state $j$ can be computed easily when the explicit series of event types and times are known.
 While we will never know the exact history of events, we can use stochastic mapping in conjunction with Markov chain Monte Carlo (MCMC) to repeatedly sample range evolution histories that are consistent with the ranges observed in the study taxa at the tips of the phylogeny.
-This technique is an adaptation of the data-augmented phylogenetic method first described by \citet{robinson03}, and was first applied to tertiary structure-dependent evolution of protein-coding nucleotide sequences.
+This technique is called data augmentation, and was first applied in phylogenetics to tertiary structure-dependent evolution of protein-coding nucleotide sequences \citep{robinson03}.
 
 This is the strategy we will use to infer the posterior distribution approximated by 
 \newline{Prob$\left( \textbf{X}_{aug}, \theta \mid \textbf{X}_{obs}, T, M \right)$}, where $\textbf{X}_{obs}$ is the range data observed at the tips, $\textbf{X}_{aug}$ is the distribution of ancestral range reconstructions over the phylogeny, $T$, where $\textbf{X}_{aug}$ is inferred jointly with the parameters, $\theta$, assuming the range evolution model, $M$, that describes $\textbf{Q}$ above.
-Ancestral range reconstructions are often of primary interest in phylogenetic biogeographic analyses, which are generated with support values as a by-product of the MCMC analysis.
+Ancestral range reconstructions are often of primary interest in phylogenetic biogeographic analyses, which are generated as stochastic mappings with support values as a by-product data augmentation.
 
 You may wonder why matrix exponentiation works fine for molecular substitution models and large multiple sequence alignments.
 Molecular substitution models typically assume each site in the multiple sequence alignment evolves independently, which may be justified because recombination degrades linkage disequilibrium over geological timescales.
@@ -37,8 +37,6 @@ For example, $q^{(1)}_{011,111}$ is the rate of range expansion for $011 \righta
 Note the rate of more than one event occurring simultaneously is zero, so a range must expand twice by one area in order to expand by two areas.
 This model is analogous to the Jukes-Cantor model for three independent characters with binary states, except the all-zero ``null range'' is forbidden.
 
-
-
 \subsection{Distance-dependent dispersal function}
 
 Lastly, we may reasonably expect that a range expansion event into an area depends on which nearby areas are currently inhabited, which imposes non-independence between characters.
@@ -57,32 +55,57 @@ For this tutorial, you can take $\eta(\cdot)$ to adjust the rate of range expans
 The $\beta$ parameter rescales the importance of geographic distance between two areas by a power law.
 Importantly, $\eta(\cdot) = 1$ when $\beta=0$, meaning geographic distance between areas is irrelevant.
 Moreover, when $\beta > 0$, $\eta(\cdot) < 1$ when area $a$ is relatively distant and $\eta(\cdot) > 1$ when area $a$ is relatively close.
+See \citet{landis13} for a full description of the model.
 
+\subsection{Specifying a data augmented DEC model}
 
-\subsection{Analysis}
+As previously, start by setting your working directory,
 
-First, we'll assign all our input files to {\tt String} variables.
 \begin{snugshade}
 \begin{lstlisting}
-in_fp   <- "./data/"
-data_fn <- "psychotria_range.nex"
-area_fn <- "hawaii_dynamic.atlas.txt"
-out_fp  <- "./output/"
-out_str <- "bg_2rate"
+setwd("/Users/arwallace/projects/RB_Biogeography_tutorial/")
 \end{lstlisting}
 \end{snugshade}
 
-Then we'll create our range data, tree, and atlas objects
+then create helper variables for file handling,
 
 \begin{snugshade}
 \begin{lstlisting}
-data  <- readDiscreteCharacterData(in_fp + data_fn)
+fp      = "./"
+area_fn = fp + "data/earth25.still.atlas.txt"
+data_fn = fp + "data/primates_bg_n25.nex"
+tree_fn = fp + "data/primates.tree"
+out_str = "bg_3"
+\end{lstlisting}
+\end{snugshade}
+
+read in our tree,
+
+\begin{snugshade}
+\begin{lstlisting}
 tree  <- readTrees(in_fp + data_fn)[1]
-atlas <- readAtlas(in_fp + area_fn)
 \end{lstlisting}
 \end{snugshade}
 
-Finally, we'll be using a few helper variables to create or move and monitor vectors
+populate our range observations,
+
+\begin{snugshade}
+\begin{lstlisting}
+data    = readDiscreteCharacterData(in_fp + data_fn)
+\end{lstlisting}
+\end{snugshade}
+
+and read in our geographical information (for details, see Section XX).
+
+\begin{snugshade}
+\begin{lstlisting}
+atlas   = readAtlas(in_fp + area_fn)
+n_areas = atlas.nAreas()
+\end{lstlisting}
+\end{snugshade}
+
+Lastly, create index variables to populate our move and monitor vectors,
+
 \begin{snugshade}
 \begin{lstlisting}
 mvi = 1
@@ -90,28 +113,56 @@ mni = 1
 \end{lstlisting}
 \end{snugshade}
 
-\subsection{Creating the model}
-
-Here, we will compose our rate matrix, {\bf Q}, parameterized by the transition rates, $\lambda$, and the distance dependent dispersal power parameter, $\beta$.
-
-First, for $\lambda$, we will create a vector of two rates, where {\tt glr[1]} corresponds to the rate of area gain (dispersal) and {\tt glr[2]} corresponds to the rate of area loss (local extinction).
-Each rate will be drawn from an exponential distribution with rate 10.0 (mean 0.1).
-Because our tree is in units of millions of years, this means our prior expectation is that any given species undergoes one dispersal or extinction event per area per ten million years.
-
-%setwd("/Users/mlandis/projects/RB_Biogeography_tutorial/")
-
-Let's declare the distributions for these priors along with their MCMC moves
+and assign the number of generations to run the MCMC analysis
 
 \begin{snugshade}
 \begin{lstlisting}
-for (i in 1:2) {
-	glr[i]       ~ dnExponential(10.0)
-	moves[mvi++] = mvScale(x=glr[i], lambda=0.5, tune=true, weight=5.0)
-}
+ngen = 500000
 \end{lstlisting}
 \end{snugshade}
 
-These are then inserted into the rate matrix {\tt $q_area$}, which gives the average rate of area gain and loss per area.
+To later interpret ancestral state monitors phylogenetically, save a copy of {\tt tree} annotated with internal node indexes.
+
+\begin{snugshade}
+\begin{lstlisting}
+write(tree,filename=tree_fn+".index.tre")
+\end{lstlisting}
+\end{snugshade}
+
+Proceeding with the model configuration, we'll first create our rate matrix that determines the rate of per-area gain and loss given the current geographical layout of the range.
+In RevBayes, data-augmented CTMC analyses require {\tt RateMap} functions to determine event rates, which differ from the familiar {\tt RateMatrix} functions that include {\tt fnJC} and {\tt fnGTR} as members.
+In their simplest form, {\tt RateMap} functions generate the rates of change over the full set of characters, where each character evolves according to a provided {\tt RateMatrix} function.
+Additionally, a {\tt RateMap} accepts a rate modifier function that induces some correlation structure to character change evolution.
+In this section, we'll be creating a biogeographic {\tt RateMap} function for the dispersal-extinction process given above.
+
+First, create a biogeographical clock to scale the rate of range evolution.
+
+\begin{snugshade}
+\begin{lstlisting}
+clock_bg ~ dnExp(10)
+moves[mvi++] = mvScale(clock_bg, lambda=0.5, weight=5.0)
+\end{lstlisting}
+\end{snugshade}
+
+Next, instantiate a simplex of gain and loss rates, distributed by a flat Dirichlet prior,
+
+\begin{snugshade}
+\begin{lstlisting}
+glr ~ dnDirichlet([1,1])
+moves[mvi++] = mvSimplexElementScale(glr, alpha=30.0, weight=5.0)
+\end{lstlisting}
+\end{snugshade}
+
+and use deterministic nodes to assign the rates nicknames.
+
+\begin{snugshade}
+\begin{lstlisting}
+r_gain := glr[1]
+r_loss := glr[2]
+\end{lstlisting}
+\end{snugshade}
+
+Insert the simplex into the rate matrix {\tt $q_area$}, which gives the average rate of area gain and loss per area.
 
 \begin{snugshade}
 \begin{lstlisting}
@@ -119,7 +170,7 @@ q_area := fnFreeBinary(glr)
 \end{lstlisting}
 \end{snugshade}
 
-Next, we will create {\tt dp}, which determines the importance of geographical distance to dispersal.
+Next, we will create {\tt dp} to represent the $\beta$ parameter, which determines the importance of geographical distance to dispersal.
 Remember that values of $\beta$ far from zero means distance is important.
 So, if we we assign a prior that pulls $\beta$ towards zero, then posterior values of $\beta$ far from zero indicate the range data are informative of the importance of distance to dispersal.
 We'll use an exponential distribution with rate 10.0 (mean 0.1) as a prior for {\tt dp}.
@@ -137,106 +188,100 @@ We will tell the {\tt fnBiogeoGRM} function to modify dispersal rates based on d
 
 \begin{snugshade}
 \begin{lstlisting}
-grm := fnBiogeoGRM(atlas=atlas, distancePower=dp, useAvailable=true, useDistance=true)
+grm := fnBiogeoGRM(atlas=atlas, distancePower=dp, useDistance=true)
 \end{lstlisting}
 \end{snugshade}
 
 Now we need a deterministic node to represent the rate matrix, {\bf Q}.
 To determine the value of this node, we'll use the function {\tt fnBiogeoDE} to assign our model parameters to transition rates as described in the introduction.
-As input, we'll pass our gain and loss rates, {\tt glr}, and our geographical rate modifier, {\tt grm}.
+As input, we'll pass our gain and loss rates, {\tt q\_area}, our geographical rate modifier, {\tt grm}, and the biogeographical clock {\tt clock\_bg}.
 In addition, we'll inform the function of the number of areas in our analysis and whether we will allow species to be absent in all areas (i.e. have the null range).
 
 \begin{snugshade}
 \begin{lstlisting}
-q_range := fnBiogeoDE(gainLossRates=q_area, geoRateMod=grm, numAreas=4, forbidExtinction=true)
+q_range := fnBiogeoDE(gainLossRates=q_area, branchRates=clock_bg, geoRateMod=grm, numAreas=n_areas, forbidExtinction=true)
 \end{lstlisting}
 \end{snugshade}
 
-To extract information for the frequencies of different cladogenic event types, we will create a Dirichlet-distributed stochastic node.
-The simplex is over three events, subset sympatry (index 0), allopatry (index 1), and widespread sympatry (index 2), but not over narrow sympatry whose range size is one.
-The prior parameter {\tt [1,1,0.1]} is known as a flat prior, meaning all event types are expected to occur at equal frequency.
-If there is information in the data of a dominant cladogenic mode of range evolution, the posterior simplex values in {\tt csf} will reflect this.
+As with the simple DEC model, we assign a flat Dirichlet prior over cladogenic event type probabilities
 
 \begin{snugshade}
 \begin{lstlisting}
-csf ~ dnDirichlet([1.,1.,0.5])
-narrow_sympatry     := csf[1]
-allopatry           := csf[2]
-widespread_sympatry := csf[3]
-moves[mvi++] = mvSimplexElementScale(csf, alpha=10.0, tune=true, weight=4.0)
+clado_prob ~ dnDirichlet( [1, 1, 1] )
+widespread_sympatry := clado_prob[1]
+subset_sympatry     := clado_prob[2]
+allopatry           := clado_prob[3]
+moves[mvi++] = mvSimplexElementScale(clado_prob, alpha=20.0, weight=5.0)
 \end{lstlisting}
 \end{snugshade}
 
-For the model's final node, we create the stochastic node for the continuous-time Markov chain (CTMC).
-This node's distribution is {\tt dnPhyloDACTMC} where {\tt DA} indicates the CTMC uses data-augmentation to compute the likelihood rather than Felsenstein's pruning algorithm.
-To create the distribution, we must pass it our {\tt tree} and {\tt Q} objects, but additionally inform the distribution that it will be using a biogeographic model, that it will introduce the simple cladogenic range evolution events described in \citet{ree08} ({\tt useCladogenesis=true}), and that it will assign zero probability to a transition away from the null range state.
+Finally, the data evolve according to a phylogenetic CTMC process. Here, we decalre a stochastic node using {\tt dnPhyloDACTMC} where {\tt DA} indicates the distribution requires data augmentation to compute the likelihood rather than Felsenstein's pruning algorithm.
+To create the distribution, we must pass it our {\tt tree} and {\tt q\_range} objects, but additionally inform the distribution that it will be using a biogeographic model, that it will introduce the simple cladogenic range evolution events described in \citet{ree08} ({\tt useCladogenesis=true}), and that it will assign zero probability to a transition away from the null range state.
 
 \begin{snugshade}
 \begin{lstlisting}
-M ~ dnPhyloDACTMC(tree=tree, Q=q_range, C=csf, type="biogeo", forbidExtinction=true, useCladogenesis=true)
+m ~ dnPhyloDACTMC(tree=tree, Q=q_range, cladoProbs=clado_prob, type="Biogeo", forbidExtinction=true, useCladogenesis=true)
 \end{lstlisting}
 \end{snugshade}
 
-In addition to proposing new model parameter values, we must also propose new data-augmented states and events to properly integrate over the space of possible range histories.
-The major challenge to sampling character histories is ensuring the character histories are consistent with the observations at the tip of the tree.
+
+So we may evaluate the graphical model's likelihood, we tell the CTMC to observe the {\tt data} object, which then primes the model with data-augmented character histories.
+Now {\tt m} has a defined likelihood value.
+\begin{snugshade}
+\begin{lstlisting}
+m.clamp(data)
+m.lnProbability()
+   -156.0288
+\end{lstlisting}
+\end{snugshade}
+
+To integrate over the space of possible range histories, we still need to add moves to propose new data augmented histories.
+The major challenge to sampling character histories is ensuring the character histories are consistent with the observations at the tips of the tree.
 The proposals in this tutorial use \citet{nielsen02}'s rejection sampling algorithm, with some modifications to account for cladogenic events and epoch-based rate matrices.
 
 The basic idea is simple.
 Each time a character history proposal is called, it selects a node at random from the tree.
-Path history proposals ({\tt mvPathCHRS()}) propose a new character history for the lineage leading to that node.
-Node history proposals ({\tt mvNodeCHRS()}) propose a new character history for the node and for the three lineages incident to that node.
-The character history proposal also samples some number of areas to update, ranging from one to all of the areas.
+Branch history proposals propose a new character history to a single randomly-chosen branch.
+Node history proposals propose a new character history for the three branches connecting to a randomly chosen node, in addition to the cladogenic state of the node itself.
+
+For each proposal, each character's history is resampled with probability {\tt lambda} -- i.e. {\tt lambda=0.01} resamples 1\% of characters, while {\tt lambda=1.} resamples all characters.
 Once the new character history is proposed, the likelihood of the model is evaluated and the MCMC accepts or rejects the new state according to e.g. the Metropolis-Hastings algorithm.
 
-Because these {\tt Move} objects update the character histories stored in the data-augmented CTMC node, e.g. {\tt M},
-they require access to a {\tt TimeTree} object to know which lineages are sisters and whether the lineages span various epochs, and a {\tt RateMap\_Biogeography} object to propose new character histories.
-The {\tt lambda} argument gives what proportion of areas' character histories to update.
-Here, if {\tt lambda=0.2}, then the proposal will redraw character histories for each area with probability 0.2 (in addition to one random area with probability 1).
-Below, we use two moves of each type with {\tt lambda=0.2} and {\tt lambda=1.0} for partial and full character history updates, respectively.
-Indicating {\tt type="biogeo"} informs the {\tt Move} object to be aware of special character history constraints, such as cladogenic events and forbidden null ranges.
-The {\tt weight} parameter should be assigned a value proportional to the number of nodes in the analysis to ensure proper mixing.
+Cladogenic events require special considerations during sampling, so we indicate {\tt type="Biogeo"}.
+Currently, only rejection-sampling is available for cladogenic histories, hence {\tt proposal="rejection"}. Finally, we apply high {\tt weight} values to the proposals since the larger the state space is, the more character history proposals needed to effectively integrate over the space of sample paths.
 
-Let's create the character history moves as follows: conservative character history updates for paths and nodes, with {\tt lambda=0.2}
+Let's create the character history moves as follows: conservative character history updates for paths and nodes, with {\tt lambda=0.05}
 
 \begin{snugshade}
 \begin{lstlisting}
-moves[mvi++] = mvCharacterHistory(ctmc=M, qmap=q_range, tree=tree, lambda=0.2, type="Biogeo", graph="node", proposal="rejection", weight=40.0)
-moves[mvi++] = mvCharacterHistory(ctmc=M, qmap=q_range, tree=tree, lambda=0.2, type="Biogeo", graph="branch", proposal="rejection", weight=40.0)
+moves[mvi++] = mvCharacterHistory(ctmc=m, qmap=q_range, tree=tree, lambda=0.05, type="Biogeo", graph="node", proposal="rejection", weight=100.0)
+moves[mvi++] = mvCharacterHistory(ctmc=m, qmap=q_range, tree=tree, lambda=0.05, type="Biogeo", graph="branch", proposal="rejection", weight=100.0)
 \end{lstlisting}
 \end{snugshade}
 
-and the same proposals for more drastic character history updates, with {\tt lambda=1.0}
+and the same proposals for more radical character history updates, with {\tt lambda=1.0}
 
 \begin{snugshade}
 \begin{lstlisting}
-moves[mvi++] = mvCharacterHistory(ctmc=M, qmap=q_range, tree=tree, lambda=1.0, type="Biogeo", graph="node", proposal="rejection", weight=10.0)
-moves[mvi++] = mvCharacterHistory(ctmc=M, qmap=q_range, tree=tree, lambda=1.0, type="Biogeo", graph="branch", proposal="rejection", weight=10.0)
+moves[mvi++] = mvCharacterHistory(ctmc=m, qmap=q_range, tree=tree, lambda=1.0, type="Biogeo", graph="node", proposal="rejection", weight=40.0)
+moves[mvi++] = mvCharacterHistory(ctmc=m, qmap=q_range, tree=tree, lambda=1.0, type="Biogeo", graph="branch", proposal="rejection", weight=40.0)
 \end{lstlisting}
 \end{snugshade}
 
-So we may evaluate the graphical model's likelihood, we tell the CTMC to observe the {\tt data} object, which will prime the model with data-augmented character histories.
-Now {\tt M} has a defined likelihood value.
+Next, create the model object,
+
 \begin{snugshade}
 \begin{lstlisting}
-M.clamp(data)
-M.lnProbability()
-   -56.0288
+my_model = model(m)
 \end{lstlisting}
 \end{snugshade}
 
-Finally, we encapsulate our graphical model into a {\tt Model} object, which can learn the model's structure and dependencies from any model parameter.
-\begin{snugshade}
-\begin{lstlisting}
-my_model = model(M)
-\end{lstlisting}
-\end{snugshade}
-
-First, we'll create monitors for our simple parameters
+and monitors for our simple parameters.
 
 \begin{snugshade}
 \begin{lstlisting}
-monitors[mni++] = mnScreen(glr, dp, narrow_sympatry, allopatry, widespread_sympatry, printgen=10)
-monitors[mni++] = mnFile(glr, dp, narrow_sympatry, allopatry, widespread_sympatry, filename=out_fp+params_fn, printgen=10)
+monitors[mni++] = mnScreen(clock_bg, r_gain, r_loss, dp, subset_sympatry, allopatry, widespread_sympatry, printgen=100)
+monitors[mni++] = mnFile(clock_bg, r_gain, r_loss, dp, subset_sympatry, allopatry, widespread_sympatry, filename=out_fn+".params.txt", printgen=10)
 \end{lstlisting}
 \end{snugshade}
 
@@ -244,48 +289,29 @@ Like any parameter, we can sample the augmented range histories from the MCMC to
 This is statistically equivalent to generating ancestral state reconstructions from a posterior distribution via stochastic mapping.
 We will extract these reconstructions using special monitors designed for the {\tt dnPhyloDACTMC} distribution.
 
-Next, we will create {\tt Mntr\_CharacterHistoryNewickFile} objects to record the sampled character history states for each node in the tree.
-This {\tt Monitor} has two {\tt style} options: {\tt counts} reports the number of gains and losses per branch in a tab-delimited Tracer-readable format;  {\tt events} reports richer information of what happens along a branch, anagenically and cladogenically, using an extended Newick format.
+Next, we will create {\tt mnCharHistoryNewick} monitors to record the sampled character history states for each node in the tree.
+This monitor has two {\tt style} options: {\tt counts} reports the number of gains and losses per branch in a tab-delimited Tracer-readable format;  {\tt events} reports richer information of what happens along a branch, anagenically and cladogenically, using an extended Newick format.
 How to read these file formats will be discussed in more detail in Section \ref{sec:posterior}.
 
 \begin{snugshade}
 \begin{lstlisting}
-monitors[mni++] = mnCharHistoryNewick(filename=fp+out_str+".events.txt", ctmc=M, tree=tree, printgen=100, style="events")
-monitors[mni++] = mnCharHistoryNewick(filename=fp+out_str+".counts.txt", ctmc=M, tree=tree, printgen=100, style="counts")
+monitors[mni++] = mnCharHistoryNewick(filename=out_fn+".events.txt", ctmc=m, tree=tree, printgen=100, style="events")
+monitors[mni++] = mnCharHistoryNewick(filename=out_fn+".counts.txt", ctmc=m, tree=tree, printgen=100, style="counts")
+
 \end{lstlisting}
 \end{snugshade}
 
-As our last monitor, the {\tt Mntr\_CharacterHistoryNhxFile} records character history values throughout the MCMC analysis, then stores some simple posterior summary statistics as a Nexus file.
-These summary statistics could be computed from the previously mentioned {\tt Monitor} output files, but {\tt mnCharHistoryNhx} provides a simple way to produce Phylowood-compatible files.
+As our last monitor,{\tt mnCharHistoryNhx} records character history values throughout the MCMC analysis, then stores some simple posterior summary statistics as a Nexus file.
+These summary statistics could be computed from the previously mentioned monitor output files, but {\tt mnCharHistoryNhx} provides a simple way to produce Phylowood-compatible files.
 We will also discuss this file's format in more detail later in the tutorial.
 
 \begin{snugshade}
 \begin{lstlisting}
-monitors[mni++] = mnCharHistoryNhx(filename=fp+out_str+".nhx.txt", ctmc=M, tree=tree, atlas=atlas, samplegen=100, maxgen=25000, burnin=0.2)
+monitors[mni++] = mnCharHistoryNhx(filename=out_fn+".phw.txt", ctmc=m, tree=tree, atlas=atlas, samplegen=10, maxgen=ngen, burnin=0.5)
 \end{lstlisting}
 \end{snugshade}
 
-WE CAN REPLACE THIS USING WRITETREE->FIGTREE
-Before we run the MCMC, we'd like to get the node index of the ancestor 
-When analysing the output, we'll take some special interest in the branch for the most recent common ancestor of {\it P. kaduana} and {\it P. hatheway}.
-We will identify this lineage by its index, 23, which is meaningful only for a fixed tree topology,
-\begin{snugshade}
-\begin{lstlisting}
-> names = tree.names()
-> names[15]
-   P_kaduana_PuuKukuiAS
-> names[16]
-   P_hathewayi_1
-> mrcaIndex(tree=tree,clade=clade(names[15],names[16]))
-   23
-\end{lstlisting}
-\end{snugshade}
-
-
-\subsection{Running an MCMC analysis}
-
-Now all that's left is to configure and run our MCMC analysis.
-For this, we create an {\tt Mcmc} object, which we give our {\tt Move} vector, our {\tt Monitor} vector, and our {\tt Model object}
+Finally, create the MCMC object
 
 \begin{snugshade}
 \begin{lstlisting}
@@ -293,58 +319,26 @@ my_mcmc = mcmc(my_model, monitors, moves)
 \end{lstlisting}
 \end{snugshade}
 
-MCMC typically requires some period of burn-in before it reaches stationarity, i.e. from a random starting point, it takes some time for the chain to produce valid samples from the posterior distribution.
-By running {\tt burnin()}, we tell the {\tt Mcmc} object to propose and reject new states but {\it not} to record anything to file.
-After burn-in is complete, we call {\tt run()}, where we begin recording valid posterior samples under our model.
+and run
 
 \begin{snugshade}
 \begin{lstlisting}
-my_mcmc.run(generations=25000)
+my_mcmc.run(generations=ngen)
 \end{lstlisting}
 \end{snugshade}
 
-Everything we've done is contained in the file {\tt biogeography\_DEC\_2rate.Rev}.
-You can modify this file as you like then re-run the analysis by typing
+\subsection{Analysis output}
 
-\begin{snugshade}
-\begin{lstlisting}
-source("./scripts/biogeography_DEC_2rate.Rev")
-\end{lstlisting}
-\end{snugshade}
+You will need a node-indexed phylogeny to interpret ancestral state reconstructions. First, open FigTree and load the Newick tree stored in {\tt data/primates.tree.index.tre}. Expand ``Node Labels'' and change ``Display'' to the custom node label. All sampled characters have a node index, which corresponds to the branch ancestral to the indexed node.
 
-
-\subsection{Exercises}
-
-
-
-\subsection{Output}
-
-\subsubsection{Sampled parameters from {\tt ScreenMonitor}}
-
-\noindent \\ \impmark Open Tracer, select the fields for the posterior probability and area gain rate, {\tt glr[2]}, then click the Joint-Marginal tab.
-
-\begin{figure}[H]
-\centering
-\includegraphics[width=3in]{figures/joint_rgain_posterior}
-\caption{Joint-marginal distribution of posterior and area gain rate, $\lambda_1$.}
-\end{figure}
-
-Here, we see a strong negative correlation between the posterior probability and the area gain rate, which is expected.
-Next, click the Estimates tab then select the three {\tt csf} parameters.
-
-\begin{figure}[H]
-\centering
-\includegraphics[width=3in]{figures/clado_freq_posterior}
-\caption{Mean values for the cladogenic state frequency simplex, where {\tt csf[1]}, {\tt csf[2]}, and {\tt csf[3]} correspond to subset sympatry, allopatry, and wide sympatry whose mean posterior values are 0.45, 0.30, and 0.25, respectively.}
-\end{figure}
-
+\includegraphics[width=4in]{figures/figtree_node_label}
 
 \subsection{Biogeographic event counts from {\tt mnCharHistoryNewick}}
 
 Recording stochastic mappings in a Tracer-compatible format requires some summarization.
 This monitor generates a tab-delimited file where the number of events of each type for each branch is recorded.
 
-\noindent \\ \impmark Open {\tt ./output/bg\_2rate.counts.txt} in a text editor.
+Open {\tt ./output/bg\_3.counts.txt} in a text editor.
 
 \begin{framed}
 \begin{lstlisting}%[basicstyle=\tiny \listingsfont, columns=texcl]
@@ -362,25 +356,11 @@ Iteration  Posterior  Likelihood    Prior	t_s0	t_s1	t_c0	t_c1	t_c2	t_c3	b0_s0	b0
 For example, {\tt b2\_s1} gives the number of areas that are gained for the branch leading to the node indexed 2.
 {\tt b2\_c} gives the cladogenic event type that gives rise to the node indexed 2, where narrow sympatry, subset sympatry, allopatry, and widespread sympatry are recorded as {\tt 0}, {\tt 1}, {\tt 2}, and {\tt 3}, respectively. The columns {\tt t\_s0} and {\tt t\_s1} give the sum of events over all branches. {\tt t\_c0}, {\tt t\_c1}, and {\tt t\_c2} give the total number of narrow sympatric, subset sympatric, allopatric, and widespread sympatric cladogenic events over the entire tree.
 
-Because the expected number of gain events should be proportional to the area gain rate, we expect to see the same negative correlation between posterior probability and number of events as we did with the posterior and rate in the {\tt parameters.txt} file.
-
-Open Tracer, select the fields for the posterior probability and the number of gained areas over the tree, {\tt t1}, then click the Joint-Marginal tab.
-
-\begin{figure}[H]
-\centering
-\includegraphics[width=3in]{figures/joint_ngain_posterior}
-\caption{Joint-marginal distribution of posterior and number dispersal events summed over the tree.}
-\end{figure}
-
-One interesting facet of this output is there are never fewer than six events.
-In fact, since we assume a stratified geography and that only one event may occur per instant, it is impossible to describe the data we see at the tips with fewer than six gain events.
-That is, six gain events is part of the maximum parsimony solution.
-
 \subsection{Biogeographic event histories from {\tt mnCharHistoryNewick}}
 
 For more detailed data exploration, this analysis also provides annotated Newick strings with the complete character mappings for the tree.
 
-\noindent \\ \impmark Open {\tt ./output/bg\_2rate.events.txt} in a text editor.
+\noindent \\ \impmark Open {\tt ./output/bg\_3.events.txt} in a text editor.
 
 \begin{framed}
 \begin{lstlisting}%[basicstyle=\tiny \listingsfont, columns=texcl]
